Moved postprocessing in filemap

--- a/axonds1/notebook/AxonDeepSeg.ipynb
+++ b/axonds1/notebook/AxonDeepSeg.ipynb
@@ -2,16 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "8a76adda-a8ea-45e3-9756-b9cef835142f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:13.346104Z",
-     "iopub.status.busy": "2024-02-26T12:14:13.345799Z",
-     "iopub.status.idle": "2024-02-26T12:14:14.406256Z",
-     "shell.execute_reply": "2024-02-26T12:14:14.405550Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -31,10 +24,10 @@
    "id": "8bfb9018-78ef-4601-857c-39274900c37e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:14.408771Z",
-     "iopub.status.busy": "2024-02-26T12:14:14.408590Z",
-     "iopub.status.idle": "2024-02-26T12:14:14.777708Z",
-     "shell.execute_reply": "2024-02-26T12:14:14.777303Z"
+     "iopub.execute_input": "2024-02-26T12:51:23.359859Z",
+     "iopub.status.busy": "2024-02-26T12:51:23.359683Z",
+     "iopub.status.idle": "2024-02-26T12:51:23.742763Z",
+     "shell.execute_reply": "2024-02-26T12:51:23.742271Z"
     }
    },
    "outputs": [],
@@ -66,10 +59,10 @@
    "id": "e2605a1d-f182-4fda-9f45-544262567cbd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:14.780111Z",
-     "iopub.status.busy": "2024-02-26T12:14:14.779954Z",
-     "iopub.status.idle": "2024-02-26T12:14:14.782895Z",
-     "shell.execute_reply": "2024-02-26T12:14:14.782515Z"
+     "iopub.execute_input": "2024-02-26T12:51:23.745479Z",
+     "iopub.status.busy": "2024-02-26T12:51:23.745145Z",
+     "iopub.status.idle": "2024-02-26T12:51:23.748153Z",
+     "shell.execute_reply": "2024-02-26T12:51:23.747859Z"
     }
    },
    "outputs": [],
@@ -92,10 +85,10 @@
    "id": "1015e967-8715-421a-8337-34602b36d9c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:14.784841Z",
-     "iopub.status.busy": "2024-02-26T12:14:14.784691Z",
-     "iopub.status.idle": "2024-02-26T12:14:14.786625Z",
-     "shell.execute_reply": "2024-02-26T12:14:14.786270Z"
+     "iopub.execute_input": "2024-02-26T12:51:23.750086Z",
+     "iopub.status.busy": "2024-02-26T12:51:23.749805Z",
+     "iopub.status.idle": "2024-02-26T12:51:23.751561Z",
+     "shell.execute_reply": "2024-02-26T12:51:23.751288Z"
     }
    },
    "outputs": [],
@@ -105,17 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "793b1e44-d92f-47e1-80a5-2aba0a7c71db",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:14.788454Z",
-     "iopub.status.busy": "2024-02-26T12:14:14.788362Z",
-     "iopub.status.idle": "2024-02-26T12:14:14.790717Z",
-     "shell.execute_reply": "2024-02-26T12:14:14.790357Z"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PosixPath('example_r20211130-ivadomed_dataset/sub-rat4_sample-data12_SEM.png'), PosixPath('example_r20211130-ivadomed_dataset/sub-rat1_sample-data1_SEM.png'), PosixPath('example_r20211130-ivadomed_dataset/sub-rat5_sample-data14_SEM.png'), PosixPath('example_r20211130-ivadomed_dataset/sub-rat3_sample-data10_SEM.png'), PosixPath('example_r20211130-ivadomed_dataset/sub-rat8_sample-V915_SEM.png'), PosixPath('example_r20211130-ivadomed_dataset/sub-rat2_sample-data5_SEM.png'), PosixPath('example_r20211130-ivadomed_dataset/sub-rat7_sample-Maxo03img60_SEM.png'), PosixPath('example_r20211130-ivadomed_dataset/sub-rat3_sample-data9_SEM.png'), PosixPath('example_r20211130-ivadomed_dataset/sub-rat3_sample-data11_SEM.png')]\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "input_images_dir_path = pl.Path(TEST_INPUT_FILES_DIR)\n",
     "input_images_paths = list(input_images_dir_path.glob('*.png'))\n",
@@ -128,10 +122,10 @@
    "id": "76e4b734-5a52-47b6-baa8-71efa40a11e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:14.792105Z",
-     "iopub.status.busy": "2024-02-26T12:14:14.791894Z",
-     "iopub.status.idle": "2024-02-26T12:14:14.794259Z",
-     "shell.execute_reply": "2024-02-26T12:14:14.793909Z"
+     "iopub.execute_input": "2024-02-26T12:51:23.756534Z",
+     "iopub.status.busy": "2024-02-26T12:51:23.756301Z",
+     "iopub.status.idle": "2024-02-26T12:51:23.758504Z",
+     "shell.execute_reply": "2024-02-26T12:51:23.758237Z"
     }
    },
    "outputs": [],
@@ -151,10 +145,10 @@
    "id": "b1b15b49-94e2-41ae-9d51-9f55b7eaebc0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:14.795541Z",
-     "iopub.status.busy": "2024-02-26T12:14:14.795297Z",
-     "iopub.status.idle": "2024-02-26T12:14:14.797966Z",
-     "shell.execute_reply": "2024-02-26T12:14:14.797625Z"
+     "iopub.execute_input": "2024-02-26T12:51:23.759607Z",
+     "iopub.status.busy": "2024-02-26T12:51:23.759523Z",
+     "iopub.status.idle": "2024-02-26T12:51:23.762034Z",
+     "shell.execute_reply": "2024-02-26T12:51:23.761762Z"
     }
    },
    "outputs": [],
@@ -179,10 +173,10 @@
    "id": "5f064247-f0d7-4770-b72f-e897af0eb8ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:14.799273Z",
-     "iopub.status.busy": "2024-02-26T12:14:14.798993Z",
-     "iopub.status.idle": "2024-02-26T12:14:14.801631Z",
-     "shell.execute_reply": "2024-02-26T12:14:14.801279Z"
+     "iopub.execute_input": "2024-02-26T12:51:23.763118Z",
+     "iopub.status.busy": "2024-02-26T12:51:23.763027Z",
+     "iopub.status.idle": "2024-02-26T12:51:23.765636Z",
+     "shell.execute_reply": "2024-02-26T12:51:23.765363Z"
     }
    },
    "outputs": [],
@@ -217,41 +211,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "56d096e1-917a-42b5-9131-d56f10396b7d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:14.802881Z",
-     "iopub.status.busy": "2024-02-26T12:14:14.802648Z",
-     "iopub.status.idle": "2024-02-26T12:14:14.805143Z",
-     "shell.execute_reply": "2024-02-26T12:14:14.804796Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def process_map_outputs(map_outputs):\n",
-    "    processed_outputs = []\n",
-    "    with osparc.ApiClient(osparc_cfg) as api_client:\n",
-    "        for map_output in map_outputs:\n",
-    "            processed_output = {}\n",
-    "            for probe_name, probe_dict in map_output.items():\n",
-    "                file_dict = json.loads(probe_dict[\"value\"])\n",
-    "                osparc_file = osparc_client.models.file.File(**file_dict)\n",
-    "                processed_output[probe_name]= osparc.api.FilesApi(api_client).download_file(osparc_file.id)\n",
-    "    \n",
-    "            processed_outputs.append(processed_output)\n",
-    "    return processed_outputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "aed6eae2-1079-4ffd-a74a-f3fe6fc4906c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:14.806329Z",
-     "iopub.status.busy": "2024-02-26T12:14:14.806110Z",
-     "iopub.status.idle": "2024-02-26T12:14:15.345022Z",
-     "shell.execute_reply": "2024-02-26T12:14:15.344514Z"
+     "iopub.execute_input": "2024-02-26T12:51:23.766699Z",
+     "iopub.status.busy": "2024-02-26T12:51:23.766612Z",
+     "iopub.status.idle": "2024-02-26T12:51:24.319102Z",
+     "shell.execute_reply": "2024-02-26T12:51:24.318591Z"
     }
    },
    "outputs": [
@@ -285,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "28145e1d-b953-4b24-919c-fe3afaeb9fce",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:15.349432Z",
-     "iopub.status.busy": "2024-02-26T12:14:15.349235Z",
-     "iopub.status.idle": "2024-02-26T12:14:15.351767Z",
-     "shell.execute_reply": "2024-02-26T12:14:15.351423Z"
+     "iopub.execute_input": "2024-02-26T12:51:24.323470Z",
+     "iopub.status.busy": "2024-02-26T12:51:24.323315Z",
+     "iopub.status.idle": "2024-02-26T12:51:24.325993Z",
+     "shell.execute_reply": "2024-02-26T12:51:24.325634Z"
     }
    },
    "outputs": [],
@@ -302,44 +268,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "12adfdeb-8395-4070-b904-8b64eed26caf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:14:15.353728Z",
-     "iopub.status.busy": "2024-02-26T12:14:15.353476Z",
-     "iopub.status.idle": "2024-02-26T12:16:04.064015Z",
-     "shell.execute_reply": "2024-02-26T12:16:04.063484Z"
+     "iopub.execute_input": "2024-02-26T12:51:24.328060Z",
+     "iopub.status.busy": "2024-02-26T12:51:24.327838Z",
+     "iopub.status.idle": "2024-02-26T12:53:17.349706Z",
+     "shell.execute_reply": "2024-02-26T12:53:17.349307Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5607"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "map = tools.maps.oSparcFileMap(input1_dir_path/'output_tasks.json', output1_dir_path/'input_tasks.json', osparc_cfg)\n",
     "map_outputs = map.evaluate(map_inputs)\n",
-    "map_outputs_file_path.write_text(json.dumps(map_outputs))"
+    "map_outputs_file_path.write_text(json.dumps(map_outputs));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "0e770fdd-360f-4a10-9daf-4c821d3601cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:16:04.066240Z",
-     "iopub.status.busy": "2024-02-26T12:16:04.066070Z",
-     "iopub.status.idle": "2024-02-26T12:16:04.068587Z",
-     "shell.execute_reply": "2024-02-26T12:16:04.068215Z"
+     "iopub.execute_input": "2024-02-26T12:53:17.352237Z",
+     "iopub.status.busy": "2024-02-26T12:53:17.352055Z",
+     "iopub.status.idle": "2024-02-26T12:53:17.354769Z",
+     "shell.execute_reply": "2024-02-26T12:53:17.354387Z"
     }
    },
    "outputs": [],
@@ -349,31 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "b956cfbf-79b9-4a93-828a-a8cb793887ca",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-26T12:16:04.070498Z",
-     "iopub.status.busy": "2024-02-26T12:16:04.070343Z",
-     "iopub.status.idle": "2024-02-26T12:16:04.422418Z",
-     "shell.execute_reply": "2024-02-26T12:16:04.421797Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "map_outputs = process_map_outputs(map_outputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "d2ccedae-e379-40ea-bc37-824cb1e52c92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:16:04.425281Z",
-     "iopub.status.busy": "2024-02-26T12:16:04.424828Z",
-     "iopub.status.idle": "2024-02-26T12:16:04.895720Z",
-     "shell.execute_reply": "2024-02-26T12:16:04.895447Z"
+     "iopub.execute_input": "2024-02-26T12:53:17.356357Z",
+     "iopub.status.busy": "2024-02-26T12:53:17.356260Z",
+     "iopub.status.idle": "2024-02-26T12:53:17.827637Z",
+     "shell.execute_reply": "2024-02-26T12:53:17.827289Z"
     }
    },
    "outputs": [
@@ -407,14 +345,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "4a876c7a-9431-466b-94a6-1c969b436007",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:16:04.900421Z",
-     "iopub.status.busy": "2024-02-26T12:16:04.900313Z",
-     "iopub.status.idle": "2024-02-26T12:16:04.902253Z",
-     "shell.execute_reply": "2024-02-26T12:16:04.901962Z"
+     "iopub.execute_input": "2024-02-26T12:53:17.832246Z",
+     "iopub.status.busy": "2024-02-26T12:53:17.832140Z",
+     "iopub.status.idle": "2024-02-26T12:53:17.834491Z",
+     "shell.execute_reply": "2024-02-26T12:53:17.834173Z"
     }
    },
    "outputs": [],
@@ -424,14 +362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "614a3601-390a-4c4f-9e47-f0e6525b9195",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:16:04.903358Z",
-     "iopub.status.busy": "2024-02-26T12:16:04.903204Z",
-     "iopub.status.idle": "2024-02-26T12:16:07.779683Z",
-     "shell.execute_reply": "2024-02-26T12:16:07.779217Z"
+     "iopub.execute_input": "2024-02-26T12:53:17.835628Z",
+     "iopub.status.busy": "2024-02-26T12:53:17.835476Z",
+     "iopub.status.idle": "2024-02-26T12:53:20.732468Z",
+     "shell.execute_reply": "2024-02-26T12:53:20.731934Z"
     }
    },
    "outputs": [
@@ -493,14 +431,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "575226fb-9514-4d20-a864-3973acab0b81",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-26T12:16:07.784655Z",
-     "iopub.status.busy": "2024-02-26T12:16:07.784466Z",
-     "iopub.status.idle": "2024-02-26T12:16:08.193631Z",
-     "shell.execute_reply": "2024-02-26T12:16:08.193161Z"
+     "iopub.execute_input": "2024-02-26T12:53:20.737673Z",
+     "iopub.status.busy": "2024-02-26T12:53:20.737572Z",
+     "iopub.status.idle": "2024-02-26T12:53:21.165406Z",
+     "shell.execute_reply": "2024-02-26T12:53:21.165063Z"
     }
    },
    "outputs": [
