Use OSPARC_API_HOST

--- a/axonds1/notebook/AxonDeepSeg.ipynb
+++ b/axonds1/notebook/AxonDeepSeg.ipynb
@@ -61,29 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e2605a1d-f182-4fda-9f45-544262567cbd",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-27T09:07:01.633417Z",
-     "iopub.status.busy": "2024-02-27T09:07:01.633254Z",
-     "iopub.status.idle": "2024-02-27T09:07:01.636042Z",
-     "shell.execute_reply": "2024-02-27T09:07:01.635737Z"
-    }
-   },
+   "execution_count": null,
+   "id": "e25d0f5e-178b-4ade-b5d1-8d40d3f69cac",
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "osparc_cfg = osparc.Configuration(host=\"10.43.103.149.nip.io:8006\",\n",
-    "                                  username=os.environ[\"OSPARC_API_KEY\"],\n",
-    "                                  password=os.environ[\"OSPARC_API_SECRET\"])\n",
-    "output_dir_path = pl.Path(os.environ['DY_SIDECAR_PATH_OUTPUTS'])\n",
-    "output1_dir_path = output_dir_path / 'output_1'\n",
-    "\n",
-    "input_dir_path = pl.Path(os.environ['DY_SIDECAR_PATH_INPUTS'])\n",
-    "input1_dir_path = input_dir_path / 'input_1'\n",
-    "\n",
-    "map_outputs_file_path = pl.Path('map_outputs.json')"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0913c1b6-5f91-4490-b7f8-2bfcfb0c7445",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -100,6 +90,32 @@
    "outputs": [],
    "source": [
     "TEST_INPUT_FILES_DIR = 'example_r20211130-ivadomed_dataset'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e2605a1d-f182-4fda-9f45-544262567cbd",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-27T09:07:01.633417Z",
+     "iopub.status.busy": "2024-02-27T09:07:01.633254Z",
+     "iopub.status.idle": "2024-02-27T09:07:01.636042Z",
+     "shell.execute_reply": "2024-02-27T09:07:01.635737Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "osparc_cfg = osparc.Configuration(host=os.environ[\"OSPARC_API_HOST\"],\n",
+    "                                  username=os.eniron[\"OSPARC_API_KEY\"],\n",
+    "                                  password=os.environ[\"OSPARC_API_SECRET\"])\n",
+    "output_dir_path = pl.Path(os.environ['DY_SIDECAR_PATH_OUTPUTS'])\n",
+    "output1_dir_path = output_dir_path / 'output_1'\n",
+    "\n",
+    "input_dir_path = pl.Path(os.environ['DY_SIDECAR_PATH_INPUTS'])\n",
+    "input1_dir_path = input_dir_path / 'input_1'\n",
+    "\n",
+    "map_outputs_file_path = pl.Path('map_outputs.json')"
    ]
   },
   {
@@ -506,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
