--- a/axonds1/notebook/AxonDeepSeg.ipynb
+++ b/axonds1/notebook/AxonDeepSeg.ipynb
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "osparc_cfg = osparc.Configuration(host=os.environ[\"OSPARC_API_HOST\"],\n",
-    "                                  username=os.eniron[\"OSPARC_API_KEY\"],\n",
+    "                                  username=os.environ[\"OSPARC_API_KEY\"],\n",
     "                                  password=os.environ[\"OSPARC_API_SECRET\"])\n",
     "output_dir_path = pl.Path(os.environ['DY_SIDECAR_PATH_OUTPUTS'])\n",
     "output1_dir_path = output_dir_path / 'output_1'\n",
